--- a/lab7/index.html
+++ b/lab7/index.html
@@ -7,16 +7,15 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="">
-    <label for="name">Ваше имя</label>
-    <input type="text" placeholder="Иван Иванов" id="name">
-    <br>
-    <label for="mail">Почта</label>
-    <input type="email" placeholder="example@domain.net" id="mail">
-    <br>
-    <button id="button1">Отправить данные</button>
-    <button id="button2">Очистить</button>
-  </form>
+  <label for="name">Ваше имя</label>
+  <input type="text" placeholder="Иван Иванов" id="name">
+  <br>
+  <label for="mail">Почта</label>
+  <input type="text" placeholder="example@domain.net" id="mail">
+  <br>
+  <button id="button1">Отправить данные</button>
+  <button id="button2">Очистить</button>
+  <div id="output"></div>
   <script src="main.js"></script>
 </body>
 </html>
